# DevUP

./: .env.example  DevUP.html  Makefile  README.md  domashka.txt  pyproject.toml  start_db.sh
migrations/: env.py
migrations/versions/: 26dc1826ce39_.py  2ff9b81252ea_.py  37471c203941_.py  9950df9d56e2_.py  a0eb4fbd7848_initial_revision.py  cfbb86393d31_.py  d56a41004bfa_.py
src/: config.py  main.py  tmain.py
src/db/: session.py
src/models/: _class.py  armor.py  enchatmens.py  enemy.py  item.py  itemarmor.py  itemweapon.py  nps.py  player.py  property.py  propertyenemy.py  propertynps.py  propertyplayer.py  usable.py  usableitem.py  weapon.py
src/routers/: animal.py  armor.py  class_.py  enchatmens.py  enemy.py  item.py  itemarmor.py  itemweapon.py  nps.py  player.py  property.py  usable.py  usableitem.py  weapon.py
src/shemas/: __class.py  __init__.py  armor.py  enchatmens.py  enemy.py  item.py  itemarmor.py  itemweapon.py  nps.py  player.py  property.py  usable.py  usableitem.py  weapon.py
