[project]
name = "domachka-devup"
version = "0.1.0"
description = ""
authors = [
    {name = "Savva",email = "savvasvisev49@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "unicorn (>=2.1.4,<3.0.0)",
    "pydantic (>=2.12.1,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
